Added basic styling to the markup

--- a/lib/client/public/css/style.css
+++ b/lib/client/public/css/style.css
@@ -1,3 +1,16 @@
 [v-cloak] {
 	display: none;
 }
+
+#logo {
+	width: 25%;
+	margin-top: 30px;
+}
+
+#app {
+	text-align: center;
+}
+
+input {
+	text-align: center;
+}
